# piper_arm

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  can_muti_activate.sh  connect.py  container.def  mise.toml  pixi.toml  pyproject.toml  record.py  submit.sh  teleop.py  train.py  train.sh  vast.sh
configs/: advantage.yaml  advantage_train.yaml  eval.yaml  play.yaml  record.yaml  rollout.yaml  sky-ssh.yaml  sky.yaml  slurm.yaml  sweep.yaml  sweep_value.yaml  train.yaml  value.yaml
distal/: advantage_cache.py  advantages.py  auroc.py  check_advantage_conditioning.py  collect.py  collect_libero_plus.py  compare_ood.py  compute_advantage_labels.py  compute_maha_stats.py  embedding.py  eval_guidance.py  eval_libero_plus.py  eval_variance.py  maha_auroc.py  maha_reward.py  mahalanobis.py  push_to_hub.py  rewards.py  rollout_value_viz.py  sae.py  sim_eval.py  train_pi_star.py  train_sae.py  train_value.py  value_model.py  zero.py
distal/hardware/: zero.py
distal/pistar06/: configuration_pistar06.py  modeling_pistar06.py
distal/plotting/: debug_maha_rewards.py  plot_gt_returns.py  plot_returns.py
distal/rewards/: configs.py  knn.py  maha.py  maha_stats.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run_singularity.sh
lerobot_policy_advantage/: pyproject.toml
lerobot_policy_advantage/lerobot_policy_advantage/: configuration_advantage.py  modeling_advantage.py  processor_advantage.py
lerobot_policy_pistar06/: pyproject.toml
lerobot_robot_piper/: pyproject.toml
lerobot_robot_piper/lerobot_robot_piper/: __init__.py  config_piper.py  piper.py
lerobot_teleoperator_piper/: pyproject.toml
lerobot_teleoperator_piper/lerobot_teleoperator_piper/: __init__.py  config_piper_teleoperator.py  piper_teleoperator.py
piper_arm/: __init__.py  add_labels.py  compute_advantage_labels.py  config.py  config_piper.py  eval_collect.py  eval_dist.py  eval_mahalanobis.py  eval_trace.py  eval_vae.py  eval_velocity_stats.py  generate_dataset.py  patch_dataset.py  piper.py  piper_passthrough_teleop.py  piper_robot.py  piper_sdk_interface.py  piper_teleop.py  push_to_hub.py  rollout.py  rollout_value_viz.py  slurm.py  train_advantage.py  train_contact_mlp.py  train_vae.py  train_value.py  value_model.py  visualize.py
piper_arm/envs/: __init__.py
piper_arm/gui/: app.py  index.html  jobs.html  nodes.html  style.css
piper_arm/policies/: configuration_act_resize.py  modeling_act_resize.py  processor_act_resize.py
piper_arm/scripts/: eval.py  generate_dataset.py  patch_dataset.py  play.py  push_to_hub.py  record.py  train.py  train_contact_mlp.py  tsne.py  visualize_tokens.py  zero.py
scripts/: connect.py  download_assets.sh  launch_collect.sh  launch_sweep.sh  play.py  record.py  sky_setup.sh  sky_setup_minimal.sh  train.py
slurm_tools/: pyproject.toml
slurm_tools/slurm_tools/: slurm.py
slurm_tools/slurm_tools/gui/: app.py  index.html  jobs.html  nodes.html
tasks/: improve-maha-auroc.md
tests/: test_rewards.py
