[project]
name = "piper-arm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "lerobot[smolvla, libero, pi] @ git+https://github.com/huggingface/lerobot.git",
  "piper-sdk>=0.6.1",
  "opencv-contrib-python>=4.12.0.88",
  "pyrealsense2-macosx>=2.54.2; sys_platform == 'darwin'",
  "pyrealsense2>=2.56.5.9235; sys_platform != 'darwin'",
  "matplotlib>=3.7.0",
  "scikit-learn>=1.3.0",
  "fabric>=3.2.2",
  "rerun-sdk>=0.22",
  "lerobot_policy_advantage",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.2", "ty>=0.0.21"]
hardware = ["lerobot_robot_piper", "lerobot_teleoperator_piper"]

[project.optional-dependencies]
gui = ["flask>=3.0"]

[project.scripts]
slurm = "piper_arm.slurm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lerobot_robot_piper = { path = "lerobot_robot_piper", editable = true }
lerobot_teleoperator_piper = { path = "lerobot_teleoperator_piper", editable = true }
lerobot_policy_advantage = { path = "lerobot_policy_advantage", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E", "F", "I"]
