[project]
name = "distal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
  "lerobot[libero, pi, smolvla, training]",
  "transformers==5.5.4",
  "piper-sdk>=0.6.1",
  "opencv-contrib-python>=4.12.0.88",
  "pyrealsense2-macosx>=2.54.2; sys_platform == 'darwin'",
  "pyrealsense2>=2.56.5.9235; sys_platform != 'darwin'",
  "matplotlib>=3.7.0",
  "scikit-learn>=1.3.0",
  "rerun-sdk>=0.22",
  "lerobot_policy_advantage",
  "lerobot_policy_pistar06",
  "slurm-tools",
  "vastai>=0.2.8,<1.0",
  "skypilot-nightly[vast, kubernetes, runpod, gcp]>=0.8,<=1.0.0.dev20260326",
  "runpod>=1.8.2",
  "pyroute2>=0.9.5",
  "google-api-python-client>=2.193.0",
  "google-cloud-tpu>=1.26.0",
  "pyopengl-accelerate>=3.1.10",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.2", "ty>=0.0.21"]
# hardware = ["lerobot_robot_piper", "lerobot_teleoperator_piper"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lerobot_robot_piper = { path = "lerobot_robot_piper", editable = true }
lerobot_teleoperator_piper = { path = "lerobot_teleoperator_piper", editable = true }
lerobot_policy_advantage = { path = "lerobot_policy_advantage", editable = true }
lerobot_policy_pistar06 = { path = "lerobot_policy_pistar06", editable = true }
slurm-tools = { git = "https://github.com/reeceomahoney/slurm-tools.git" }
lerobot = { git = "https://github.com/reeceomahoney/lerobot", branch = "distal-libero-plus"}
# lerobot = { git = "https://github.com/reeceomahoney/lerobot", branch = "distal"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E", "F", "I"]
