[project]
name = "distal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
  "lerobot[libero, libero-plus, pi, training]",
  "transformers==5.5.4",
  "piper-sdk>=0.6.1",
  "matplotlib>=3.7.0",
  "scikit-learn>=1.3.0",
  "rerun-sdk>=0.22",
  "lerobot_policy_pistar06",
  "slurm-tools",
  "vastai-sdk>=0.2.5,<0.3",
  "skypilot[vast, kubernetes, runpod]",
  "runpod>=1.8.2",
  "pyroute2>=0.9.5",
  "pyopengl-accelerate>=3.1.10",
  "future>=1.0.0",
  "torch>=2.7,<2.11.0",
  "torchvision>=0.22.0,<0.26.0",
  "torchcodec>=0.3.0,<0.11.0",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.2", "ty>=0.0.21"]
hardware = [
  "lerobot[intelrealsense]",
  "lerobot_robot_piper",
  "lerobot_teleoperator_piper",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
lerobot_robot_piper = { path = "lerobot_robot_piper", editable = true }
lerobot_teleoperator_piper = { path = "lerobot_teleoperator_piper", editable = true }
lerobot_policy_pistar06 = { path = "lerobot_policy_pistar06", editable = true }
slurm-tools = { git = "https://github.com/reeceomahoney/slurm-tools.git" }
lerobot = { git = "https://github.com/reeceomahoney/lerobot", branch = "distal" }
skypilot = { git = "https://github.com/reeceomahoney/skypilot.git", branch = "vast-no-geo-pin" }
torch = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]
torchcodec = [{ index = "pytorch-cu126", marker = "sys_platform == 'linux'" }]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E", "F", "I"]
