[project]
name = "lerobot_policy_advantage"
version = "0.1.0"
description = "Advantage-conditioned policy plugin for LeRobot"
requires-python = ">=3.12, <3.13"
dependencies = [
  "lerobot[smolvla] @ git+https://github.com/reeceomahoney/lerobot@feat/libero-process-isolation",
  "distal",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
