[project]
name = "lerobot_policy_pistar06"
version = "0.1.0"
description = "Pistar06 policy plugin for LeRobot"
requires-python = ">=3.12, <3.13"
dependencies = ["lerobot", "distal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lerobot = { git = "https://github.com/reeceomahoney/lerobot", branch = "distal-libero-plus"}
# lerobot = { git = "https://github.com/reeceomahoney/lerobot", branch = "distal"}

[tool.hatch.metadata]
allow-direct-references = true
