[project]
name = "lerobot_robot_piper"
version = "0.1.0"
description = "Piper robot plugin for LeRobot"
requires-python = ">=3.10,<3.11"
dependencies = [
  "lerobot @ git+https://github.com/huggingface/lerobot.git",
  "piper-sdk>=0.6.1",
  "pyrealsense2-macosx>=2.54.2; sys_platform == 'darwin'",
  "pyrealsense2>=2.56.5.9235; sys_platform != 'darwin'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
