[project]
name = "lerobot_teleoperator_piper"
version = "0.1.0"
description = "Piper teleoperator plugin for LeRobot"
requires-python = ">=3.10,<3.11"
dependencies = [
  "lerobot @ git+https://github.com/huggingface/lerobot.git",
  "piper-sdk>=0.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
