[project]
name = "slurm-tools"
version = "0.1.0"
description = "SLURM job submission CLI and web monitoring GUI"
requires-python = ">=3.10,<3.11"
dependencies = ["draccus", "fabric>=3.2.2", "flask>=3.0"]

[project.scripts]
slurm = "slurm_tools.slurm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
